--- a/digitalocean/cloud_manager/components/dns-issuer.yaml
+++ b/digitalocean/cloud_manager/components/dns-issuer.yaml
@@ -7,7 +7,7 @@ spec:
     # The ACME server URL
     server: https://acme-v02.api.letsencrypt.org/directory
     # Email address used for ACME registration
-    email: [PUT_YOUR_EMAIL_HERE]
+    email: [PUT_EMAIL_HERE]
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-dns
