--- a/digitalocean/cloud_manager/components/dns-issuer.yaml
+++ b/digitalocean/cloud_manager/components/dns-issuer.yaml
@@ -1,4 +1,4 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-dns
@@ -16,5 +16,5 @@ spec:
     - dns01:
         digitalocean:
           tokenSecretRef:
-            name: digitalocean
+            name: digitalocean-dns
             key: access-token
