--- a/digitalocean/cloud_manager/example_deployment.yaml
+++ b/digitalocean/cloud_manager/example_deployment.yaml
@@ -33,7 +33,7 @@ spec:
       name: nginxs
       targetPort: 80
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginx-ingress
@@ -50,6 +50,9 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: nginxservice
-          servicePort: nginxs
+          service:
+            name: nginxservice
+            port:
+              name: nginxs
