fix(DO): enabling non-default ssh private key paths (WIP)

--- a/digitalocean/cloud_manager/.env
+++ b/digitalocean/cloud_manager/.env
@@ -6,3 +6,9 @@ ssh_fingerprint=""
 
 #Put your email here:
 email=""
+#Put your ssh private key path here if not default
+privkeypath="/home/nedsi/.ssh/julien-rsa"
+
+#Default ssh private key path
+default_privkeypath=""$(/home/"$USER"/.ssh/id_rsa)
+privkeypath=${default_privkeypath:-$privkeypath}
