fix(DO): no more error when a default SSH key doesn't exist

--- a/digitalocean/cloud_manager/.env
+++ b/digitalocean/cloud_manager/.env
@@ -10,5 +10,7 @@ email=""
 privkeypath="/home/nedsi/.ssh/julien-rsa"
 
 #Default ssh private key path
-default_privkeypath=""$(/home/"$USER"/.ssh/id_rsa)
+if [ -f "/home/$USER/.ssh/id_rsa" ]; then
+  default_privkeypath=$(/home/"$USER"/.ssh/id_rsa)
+fi
 privkeypath=${default_privkeypath:-$privkeypath}
