fix(PR): remove all PII

--- a/digitalocean/cloud_manager/.env
+++ b/digitalocean/cloud_manager/.env
@@ -7,7 +7,7 @@ ssh_fingerprint=""
 #Put your email here:
 email=""
 #Put your ssh private key path here if not default
-privkeypath="/home/nedsi/.ssh/julien-rsa"
+privkeypath=""
 
 #Default ssh private key path
 if [ -f "/home/$USER/.ssh/id_rsa" ]; then
