--- a/digitalocean/cloud_manager/.env
+++ b/digitalocean/cloud_manager/.env
@@ -11,6 +11,6 @@ privkeypath=""
 
 #Default ssh private key path
 if [ -f "/home/$USER/.ssh/id_rsa" ]; then
-  default_privkeypath=$(/home/"$USER"/.ssh/id_rsa)
+  default_privkeypath=/home/"$USER"/.ssh/id_rsa
 fi
 privkeypath=${default_privkeypath:-$privkeypath}
